# core

./: CMakeLists.txt  README.md
chotkeys/: CMakeLists.txt  application.cpp  hotkeys.cpp  hotkeys.h
clipboard/: CMakeLists.txt
cpufreq/: CMakeLists.txt
cupdatecursor/: main.cpp
debian/: control  rules
gmenuproxy/: CMakeLists.txt  actions.h  dbusmenuadaptor.h  gdbusmenutypes_p.h  menu.cpp  menuproxy.cpp  menuproxy.h  window.cpp  window.h
notificationd/: CMakeLists.txt  application.cpp  application.h  datehelper.cpp  historymodel.cpp  main.cpp  notificationpopup.cpp  notificationwindow.cpp  screenhelper.h
notificationd/dbus/: notificationsadaptor.cpp  notificationsadaptor.h
notificationd/qml/: IconButton.qml  NotificationWindow.qml  QmlNotificationPopup.qml  main.qml
polkit-agent/: CMakeLists.txt  dialog.cpp  main.cpp  main.qml
powerman/: CMakeLists.txt  dimdisplayaction.cpp
screen-brightness/: CMakeLists.txt
sddm-helper/: CMakeLists.txt
session/: CMakeLists.txt  application.cpp  application.h  main.cpp  processmanager.cpp  processmanager.h
settings-daemon/: CMakeLists.txt  application.cpp  application.h
settings-daemon/mouse/: mousemanager.cpp  x11libinputdummydevice.cpp  x11libinputdummydevice.h
settings-daemon/theme/: com.cutefish.Theme.xml  thememanager.cpp  thememanager.h
settings-daemon/touchpad/: touchpadmanager.cpp
settings-daemon/touchpad/x11/: propertyinfo.h  xcbatom.cpp  xlibbackend.cpp  xlibnotifications.cpp  xlibnotifications.h  xlibtouchpad.cpp  xlibtouchpad.h  xrecordkeyboardmonitor.cpp  xrecordkeyboardmonitor.h
shutdown-ui/: CMakeLists.txt  IconButton.qml  main.qml
xembed-sni-proxy/: CMakeLists.txt  fdoselectionmanager.cpp  fdoselectionmanager.h  main.cpp  sniproxy.cpp  sniproxy.h  xcb_connection.cpp  xcb_connection.h  xcbutils.h
